feat: add game map team definitions